// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components NotificationContent render relative datetime replaces the content of time tags with a relative datetime 1`] = `
.emotion-0 {
  color: inherit!important;
  cursor: inherit;
  margin: 0;
  line-height: 1.2;
  font-size: 0.865em!important;
  margin-top: 1em!important;
  word-break: break-word!important;
}

<div>
  <article
    class="emotion-0"
  >
    <p>
      The event starts 
      <time
        datetime="2021-03-11T05:33:12Z"
        timeago-id="1"
      >
        on March 11
      </time>
      .
    </p>
  </article>
</div>
`;

exports[`components NotificationContent render sanitization renders the content compiled and sanitized 1`] = `
.emotion-0 {
  color: inherit!important;
  cursor: inherit;
  margin: 0;
  line-height: 1.2;
  font-size: 0.865em!important;
  margin-top: 1em!important;
  word-break: break-word!important;
}

<div>
  <article
    class="emotion-0"
  >
    
            
    <p>
      Hello, 
      <a>
        click here.
      </a>
    </p>
    
            
    <img
      src="null"
    />
    
            
  </article>
</div>
`;
